--- a/index.html
+++ b/index.html
@@ -11,14 +11,17 @@
 <body>
     <div class="greetings">
     <!-- silahkan menambah kata sesuai keinginan dengan <span>text...</span -->
+        <span>H</span>
+        <span>E</span>
+        <span>I</span>
+        
         <span>A</span>
         <span>N</span>
         <span>I</span>
         <span>S</span>
-        <span>!</span>
     </div>
     <div class="description">
-        <span>Semangat Menjalani Kelas Weekend nya !</span>
+        <span>Semangat Untuk Kelas Weekend nya !</span>
     </div>
     <div class="button">
         <button>
