--- a/index.html
+++ b/index.html
@@ -12,16 +12,14 @@
     <div class="greetings">
     <!-- silahkan menambah kata sesuai keinginan dengan <span>text...</span -->
         <span>H</span>
-        <span>E</span>
-        <span>I</span>
-        
-        <span>A</span>
+        <span>E Y</span>
         <span>N</span>
         <span>I</span>
         <span>S</span>
+
     </div>
     <div class="description">
-        <span>Semangat Untuk Kelas Weekend nya !</span>
+        <span>Semangat Lah Ya Untuk Kelas Weekend nya</span>
     </div>
     <div class="button">
         <button>
