--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <div class="greetings">
     <!-- silahkan menambah kata sesuai keinginan dengan <span>text...</span -->
         <span>H</span>
-        <span>E Y</span>
-        <span>N</span>
+        <span>E Y  </span>
+        <span>A N</span>
         <span>I</span>
         <span>S</span>
 
     </div>
     <div class="description">
-        <span>Semangat Lah Ya Untuk Kelas Weekend nya</span>
+        <span>Semangat Ya! Untuk Kelas Weekend nya</span>
     </div>
     <div class="button">
         <button>
